--- a/locales/ru.json
+++ b/locales/ru.json
@@ -25,7 +25,7 @@
             "cat2": "Боль в сердце",
             "cat3": "ДТП с пострадавшими",
             "cat4": "Травма руки/ноги",
-            "cat5": "Другое" 
+            "cat5": "Другое"
         },
         "address-title": "Адрес",
         "address-placeholder": "Введите адрес",
@@ -62,7 +62,8 @@
             "usty-kamenogorsk": "Усть-Каменогорск",
             "semey": "Семей",
             "atyrau": "Атырау",
-            "kostanay": "Костанай"
+            "kostanay": "Костанай",
+            "ridder": "Риддер"
         }
     },
     "forum-screen": {
@@ -95,7 +96,8 @@
         "system": "Системные",
         "users": "Пользовательские",
         "report-a-disasters": "Сообщить о бедствии",
-        "created-at": "Дата создания"
+        "created-at": "Дата создания",
+        "no-data": "По данному запросу не найдено проишествий"
     },
     "read-more-button": "Читать дальше",
     "hide-button": "Скрыть",
@@ -119,8 +121,10 @@
         "search-animal": "Поиск питомца",
         "information": "Информация",
         "finding": "Нахождение",
-        "info": "Инфор.",
-        "write-message-button": "Написать"
+        "info": "Информация",
+        "write-message-button": "Сообщить",
+        "no-title": "Пропавших не обнаружено",
+        "no-subtitle": "Здесь будет отображаться список всех пропущенных людей и животных"
     },
     "add-missed-screen": {
         "title": "Сообщить о пропаже",
@@ -150,7 +154,15 @@
         "notifications": "Настройки уведомления",
         "reference": "Справка",
         "about-programm": "О программе",
-        "faq": "Часто задаваемые вопросы"
+        "faq": "Часто задаваемые вопросы",
+        "offer-agreement": "Договор оферты",
+        "usage-policy": "Политика использования",
+        "rescuer-code": "Кодекс спасателя",
+        "titles": {
+            "profile": "Профиль",
+            "settings": "Настройки",
+            "information": "Информация"
+        }
     },
     "profile-settings": {
         "title": "Настройки профиля",
@@ -160,7 +172,8 @@
         "name": "Имя",
         "surname": "Фамилия",
         "phone": "Номер телефона",
-        "password": "Пароль"
+        "password": "Пароль",
+        "photo-updates": "Фото профиля обновлено"
     },
     "journal-screen": {
         "categories": {
@@ -181,7 +194,9 @@
         "cancel": "Отказаться",
         "map": "Посмотреть на карте",
         "no-incident-title": "У вас пока нет выбранного инцидента",
-        "no-incident-subtitle": "Здесь будет отображаться инцидент, на который Вы откликнулись"
+        "no-incident-subtitle": "Здесь будет отображаться инцидент, на который Вы откликнулись",
+        "error-title": "Возникли непредвиденные проблемы",
+        "error-subtitle": "Попробуйте, пожалуйста, позже"
     },
     "achievments": {
         "golded-star": "Золотая звезда спасателя",
@@ -215,6 +230,8 @@
         "four-answer": "Вы получите уведомление в приложении, как только ваша помощь будет принята. Также вы сможете следить за статусом своих предложений в разделе 'Журналы'.",
         "fifth-question": "Какие типы происшествий я могу сообщить через приложение?",
         "fifth-answer": "Вы можете сообщить о транспортных авариях, пожарах, утоплении, медицинских чрезвычайных ситуациях и других происшествиях, требующих немедленной помощи.",
+        "sixth-question": "Как можно сообщить о технических ошибках в мобильном приложении?",
+        "sixth-answer": "Замечанные технические проблемы Вы можете отправить в чат с Технической поддержкой или же на email: Info@batyssp.kz. Так же Вы можете оставить свой отзыв о нём. Мы прислушиваемся к каждому голосу наших пользователей",
         "tech-support": "Написать в тех.поддержку"
     },
     "contacts-screen": {
@@ -302,7 +319,8 @@
         "password-placeholder": "Введите пароль",
         "login-button": "Войти",
         "account": "У вас отсутствует аккаунт?",
-        "create-button": "Создать"
+        "create-button": "Создать",
+        "pass-recovery": "Забыли пароль?"
     },
     "reg-screen": {
         "eyewitness": "Очевидец",
@@ -323,5 +341,82 @@
         "reg-button": "Зарегистрироваться",
         "certificate": "Сертификат",
         "certificate-placeholder": "Загрузите сертификат"
+    },
+    "recovery-screen": {
+        "send-mail": {
+            "title": "Забыли пароль?",
+            "description": "Введите почту, которую вы указывали при регистрации.",
+            "placeholder": "Введите email",
+            "user-not-found": "Пользователь не найден"
+        },
+        "verify-code": {
+            "title": "Восстановление пароля",
+            "description": "Введите уникальный шестизначный код, полученный на ваш почтовый ящик",
+            "invalid-code": "Неправильный код"
+        },
+        "password-step": {
+            "title": "Новый пароль",
+            "description": "Создание нового уникального пароля",
+            "pass-title": "Пароль",
+            "pass-placeholder": "Введите пароль",
+            "confrim-pass-title": "Подтвердите пароль",
+            "confrim-pass-placeholder": "Введите пароль ещё раз",
+            "passwords-not-valid": "Пароли не совпадают",
+            "passowrd-must-be-more": "Пароль должен быть свыше 8 символов"
+        },
+        "next-button": "Далее",
+        "save-button": "Сохранить",
+        "alert-title": "Сообщение",
+        "alert-body": "Пароль успешно изменён. Вы можете вернуться к авторизации"
+    },
+    "success-finished-modal": {
+        "title": "Выполнено!",
+        "subtitle": "Инцидент успешно завершён"
+    },
+    "offer-agreement-screen": {
+        "info-1": "1. Общие положения",
+        "info-text-1": "1.1. Настоящий документ является официальным предложением (далее – «Оферта») по предоставлению услуг через мобильное приложение «Спасатель», которое выступает в роли агрегатора для связи очевидцев происшествий с добровольными спасателями.<br/>1.2. Акцептом (принятием) данной Оферты считается регистрация и использование мобильного приложения. Принятие Оферты означает полное и безоговорочное согласие с условиями настоящего договора.<br/>1.3. Мобильное приложение «[название приложения]» предоставляет площадку для взаимодействия между очевидцами происшествий и добровольными спасателями, но не несет ответственности за результаты предоставления помощи добровольными спасателями.",
+        "info-2": "2. Термины и определения",
+        "info-text-2": "2.1. *Приложение* – мобильное приложение «[название приложения]», которое предоставляет платформу для взаимодействия очевидцев происшествий и добровольных спасателей.<br/>2.2. *Очевидец* – физическое лицо, использующее Приложение для вызова добровольного спасателя в случае происшествия.<br/>2.3. *Добровольный спасатель* – зарегистрированный пользователь Приложения, готовый предоставлять первую помощь в экстренных ситуациях.<br/>2.4. *Происшествие* – любая ситуация, которая требует оказания первой помощи, о которой очевидец сообщает через Приложение.",
+        "info-3": "3. Предмет договора",
+        "info-text-3": "3.1. Настоящая Оферта регулирует отношения между оператором Приложения, очевидцем и добровольным спасателем в рамках использования Приложения для обмена информацией о происшествиях и оказания первой помощи.<br/>3.2. Оператор Приложения предоставляет информационную платформу для организации взаимодействия между очевидцами и добровольными спасателями.<br/>3.3. Оператор Приложения не несет ответственности за достоверность предоставляемой информации очевидцем и за действия добровольного спасателя.",
+        "info-4": "4. Права и обязанности сторон",
+        "info-text-4": "4.1. Оператор Приложения обязуется:<br/>- Обеспечить круглосуточный доступ к Приложению для очевидцев и добровольных спасателей.<br/>- Обеспечить техническую поддержку работы Приложения.<br/>4.2. *Очевидец* обязуется:<br/>- Сообщать через Приложение только о реальных происшествиях.<br/>- Предоставлять точные данные о происшествии.<br/>4.3. *Добровольный спасатель* обязуется:<br/>- Реагировать на запросы очевидцев в рамках своих возможностей и навыков.<br/>- Действовать в соответствии с законодательством Республики Казахстан и правилами оказания первой помощи.<br/>4.4. Оператор Приложения не несет ответственности за качество оказания первой помощи добровольным спасателем или последствия его действий.",
+        "info-5": "5. Ответственность сторон",
+        "info-text-5": "5.1. Оператор Приложения не несет ответственности за:<br/>- Любые последствия, возникшие вследствие взаимодействия очевидца и добровольного спасателя.<br/>- Достоверность информации, предоставленной очевидцем.<br/>5.2. Очевидец и добровольный спасатель принимают на себя все риски, связанные с использованием Приложения для организации оказания первой помощи.",
+        "info-6": "6. Прочие условия",
+        "info-text-6": "6.1. Настоящий договор вступает в силу с момента акцепта Оферты и действует на протяжении всего периода использования Приложения.<br/>6.2. Оператор Приложения оставляет за собой право вносить изменения в условия Оферты, уведомив пользователей Приложения.<br/>6.3. Все споры, возникающие в связи с настоящим договором, решаются путем переговоров. В случае невозможности урегулирования спора он подлежит рассмотрению в соответствии с действующим законодательством Республики Казахстан.",
+        "info-7": "7. Контактная информация",
+        "info-text-7": "Оператор Приложения:<br/>ТОО «Батыс Сервис Про»<br/>Казахстан, Алматы, улица Казыбек би, 65, офис 720<br/>+77025111511"
+    },
+    "usage-policy-screen": {
+        "info-1": "1. Общие положения",
+        "info-text-1": "1.1. Настоящий Регламент устанавливает правила использования мобильного приложения «Спасатель» (далее – «Приложение»), предназначенного для взаимодействия очевидцев происшествий с добровольными спасателями.<br/>1.2. Цель Приложения – оперативная передача информации о происшествиях от очевидцев к добровольным спасателям для оказания первой помощи до прибытия экстренных служб.<br/>1.3. Пользователями Приложения являются два типа лиц:<br/>• Очевидцы – лица, сообщающие о происшествиях и нуждающиеся в помощи добровольного спасателя.<br/>• Добровольные спасатели – лица, зарегистрированные в Приложении для оказания помощи в чрезвычайных ситуациях.",
+        "info-2": "2. Порядок использования Приложения",
+        "info-text-2": "2.1. Для начала использования Приложения пользователь должен зарегистрироваться, указав свои контактные данные и согласившись с условиями использования.<br/>2.2. Очевидцы:<br/>• Должны предоставлять точную информацию о происшествии (местоположение, характер инцидента и т.д.).<br/>• Обязаны соблюдать правила безопасности и не подвергать себя и других лиц опасности.<br/>• Не должны злоупотреблять вызовами спасателей для ложных или несущественных инцидентов.<br/>2.3. Добровольные спасатели:<br/>• Проходят регистрацию с подтверждением квалификации и согласие с Кодексом спасателя.<br/>• Обязаны реагировать на вызовы только в тех ситуациях, где они могут оказать помощь.<br/>• Несут ответственность за соблюдение законов и правил первой помощи при выполнении своих обязанностей.<br/>2.4. Оператор Приложения не несет ответственности за действия добровольных спасателей и не вмешивается в процесс оказания помощи. Приложение является исключительно информационной платформой.",
+        "info-3": "3. Порядок взаимодействия",
+        "info-text-3": "3.1. При обнаружении происшествия очевидец должен:<br/>• Оценить ситуацию и, если возможно, устранить угрозу для себя и окружающих.<br/>• Открыть Приложение и выбрать функцию «Вызов спасателя».<br/>• Ввести точные данные о происшествии (местоположение, описание инцидента).<br/>• Дождаться подтверждения вызова от ближайшего спасателя.<br/>3.2. Добровольный спасатель, получивший сигнал, обязан:<br/>• Подтвердить готовность к оказанию помощи.<br/>• Прибыть на место происшествия в кратчайшие сроки.<br/>• Оказать первую помощь согласно стандартам и рекомендациям.",
+        "info-4": "4. Ответственность пользователей",
+        "info-text-4": "4.1. Очевидцы несут ответственность за достоверность предоставляемой информации о происшествии.<br/>4.2. Добровольные спасатели обязаны оказывать помощь в пределах своей компетенции и соблюдая все меры безопасности.<br/>4.3. Приложение не несет ответственности за качество оказания помощи или за действия пользователей.",
+        "info-5": "5. Конфиденциальность и защита данных",
+        "info-text-5": "5.1. Все данные, введенные пользователями в Приложение, обрабатываются в соответствии с Политикой конфиденциальности и используются исключительно для обеспечения работы Приложения.<br/>5.2. Оператор Приложения обязуется не передавать личные данные пользователей третьим лицам без их согласия, за исключением случаев, предусмотренных законом.",
+        "info-6": "6. Изменения в Регламенте",
+        "info-text-6": "6.1. Оператор Приложения оставляет за собой право изменять условия Регламента, уведомив пользователей через Приложение.<br/>6.2. Новая редакция Регламента вступает в силу с момента ее публикации в Приложении.",
+        "info-7": "7. Контактная информация",
+        "info-text-7": "ТОО «Батыс Сервис Про»<br/>Казахстан, Алматы, улица Казыбек би, 65, офис 720<br/>+77025111511"
+    },
+    "rescuer-code-screen": {
+        "info-1": "1. Общие положения",
+        "info-text-1": "1.1. Настоящий Кодекс разработан в соответствии с законодательством Республики Казахстан и регулирует деятельность добровольных спасателей, зарегистрированных в приложении «Спасатель» (далее – «Приложение»).<br/>1.2. Добровольный спасатель (далее – «Спасатель») — это лицо, добровольно оказывающее первую помощь пострадавшим в чрезвычайных ситуациях до прибытия профессиональных экстренных служб.<br/>1.3. Кодекс устанавливает этические и правовые нормы, обязательные для соблюдения Спасателями при оказании помощи в рамках Приложения.",
+        "info-2": "2. Основные принципы работы Спасателя",
+        "info-text-2": "2.1. Законность. Деятельность Спасателя должна соответствовать действующему законодательству Республики Казахстан, включая нормы о гражданской защите и оказании первой помощи.<br/>2.2. Добровольность. Спасатель оказывает помощь на добровольной основе, без принуждения и обязательств перед третьими лицами, за исключением ситуаций, когда такое обязательство налагается законодательством.<br/>2.3. Конфиденциальность. Спасатель обязуется сохранять в тайне личные данные пострадавших, а также информацию о происшествии, за исключением случаев, когда их разглашение требуется по закону или для оказания помощи.<br/>2.4. Благожелательность и уважение. Спасатель обязан проявлять уважение к достоинству пострадавшего, действовать корректно и тактично в любой ситуации, избегая грубости и агрессии.<br/>2.5. Компетентность. Спасатель оказывает помощь в пределах своей квалификации и не должен выполнять действия, требующие специальных медицинских знаний, если он ими не обладает.",
+        "info-3": "3. Права и обязанности Спасателя",
+        "info-text-3": "3.1. Права Спасателя:<br/>Отказаться от выполнения вызова, если помощь может угрожать его жизни или здоровью.<br/>При необходимости, передать информацию о происшествии профессиональным экстренным службам для обеспечения более эффективной помощи.<br/>Обратиться за правовой защитой в случае возникновения претензий или обвинений, связанных с оказанием помощи.<br/>3.2. Обязанности Спасателя:<br/>Оказывать помощь в пределах своей компетенции до прибытия профессиональных спасательных служб.<br/>Уведомлять о своих действиях пострадавшего (если это возможно) и учитывать его пожелания при оказании помощи.<br/>Соблюдать все меры предосторожности для предотвращения угрозы собственной безопасности и безопасности пострадавшего.<br/>Обеспечивать сохранение правопорядка на месте происшествия, содействовать экстренным службам при необходимости.",
+        "info-4": "4. Ответственность Спасателя",
+        "info-text-4": "4.1. Спасатель несет ответственность за последствия своих действий или бездействия в рамках оказания первой помощи в соответствии с законодательством Республики Казахстан.<br/>4.2. Спасатель не может быть привлечен к ответственности за предоставление помощи, если его действия были совершены в пределах разумной осторожности и с учетом обстоятельств происшествия (за исключением случаев грубой небрежности или преднамеренного причинения вреда).<br/>4.3. В случае нарушения Кодекса, Спасатель может быть исключен из системы Приложения с уведомлением об этом соответствующих органов при необходимости.",
+        "info-5": "5. Этика и поведение Спасателя",
+        "info-text-5": "5.1. Спасатель обязан сохранять самообладание и действовать быстро, но осознанно, избегая паники и лишних эмоциональных реакций.<br/>5.2. Взаимодействие с пострадавшими и очевидцами должно строиться на принципах доверия, взаимоуважения и поддержки.<br/>5.3. Спасатель не имеет права требовать вознаграждения за оказание помощи и должен избегать любых действий, которые могут трактоваться как корыстные или личные выгоды.",
+        "info-6": "6. Заключительные положения",
+        "info-text-6": "6.1. Все Спасатели должны пройти обязательное обучение по правилам оказания первой помощи и ознакомиться с законодательными нормами Республики Казахстан в этой области.<br/>6.2. В случае изменения законодательства или нормативных актов Республики Казахстан, требующих пересмотра положений данного Кодекса, оператор Приложения уведомит Спасателей об изменениях и предложит обновленные условия для продолжения их деятельности в системе.<br/>6.3. Настоящий Кодекс вступает в силу с момента регистрации Спасателя в Приложении и является обязательным для исполнения на протяжении всего срока использования Приложения."
     }
 }
